fixed the /leagueManagment/addGame, added the Stage staff to anythong needed now Saif 11 is really done. added games to ll the  stages. added referees and fieldsto the DB and fixed that when pulling game it will show the name of the field.
